????-??-??: Version 0.4.0
 - Added aacs_open2() and error codes
 - Renamed libaacs_test to aacs_info
 - Added aacs_get_mkb_version()
 - Fixed memory leaks
 - Fixed buffer overflow

2012-03-21: Version 0.3.1
 - Added configure option for libgcrypt prefix
 - Fixed building Win32 DLL
 - Fixed segfault when mount point path can't be resolved
 - Do not export internal symbols from generated parser/lexer
 - Do not distribute generated parser files
 - Check for libgpg-error. Link against it when needed.
 - Distribute README.txt
 - Added ChangeLog

2011-11-30: Version 0.3.0
 - First release